--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="css/style.css" />
     <title>Dinner in Perth</title>
   </head>
   <body>
@@ -26,5 +26,6 @@
     <footer>
       This is coded by Ami Fukuyama and is open-sourced on GitHub and Netlify.
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
